fix layout issues by setting root element to full viewport size

--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,10 @@
 #root {
-  max-width: 1280px;
+  /* max-width: 1280px; */
   margin: 0 auto;
-  padding: 2rem;
+  /* padding: 2rem; */
   text-align: center;
+  width: 100vw;
+  height: 100vh;
 }
 
 .logo {
@@ -73,48 +75,6 @@
 
 
 
-.options {
-  display: flex;
-}
-
-.option {
-  border: 1px solid rgb(7, 55, 55, 0.9);
-  width: 80px;
-  height: 80px;
-  border-radius: 80px;
-  background-color: rgba(7, 55, 55, 0.9);
-  color: white;
-  margin: 25px;
-  cursor: pointer;
-  display: flex;
-  align-items: center; 
-  justify-content: center;
-  font-family: 'Prociono';
-  font-size: small;
-}
-
-
-.option.disabled {
-  pointer-events: none;
-  opacity: 0.5;       
-  cursor: not-allowed; 
-}
-
-
-.option:not(.selected):hover {
-  background: linear-gradient(
-    45deg, #e0f2f1, #ffffff
-  );
-  color: rgba(7, 55, 55, 0.9);
-  border: 1px solid rgb(7, 55, 55, 0.9);
-}
-
-.option.selected {
-  border: 1px solid rgb(7, 55, 55, 0.9);
-  background-color: rgba(7, 55, 55, 0.9);
-  color: white;
-}
-
 
 body {
   background-image:
@@ -134,14 +94,20 @@ body {
   /* background-blend-mode: overlay; */
 }
 
-.uhghu {
-  font-family: 'Knewave';
-  position: absolute;
-  top: 25px;
-  left: 25px;
+nav {
+  height: 59px;
+  background-color: aliceblue;
 }
 
-.uhghu h3 {
+nav .icon {
+  font-family: 'Knewave';
+  position: absolute;
+  top: 8px;
+  left: 25px;
+  /* background-color: aquamarine; */
+}
+
+nav .icon h3 {
   font-size: small;
 }
 
@@ -149,11 +115,11 @@ body {
 .top-board {
   height: 100px;
   width: 250px;
+  margin: 0 auto;
   padding: 30px;
   position: relative;
-  /* bottom: 40px; */
-  bottom: 100px;
-  margin: 0 auto;
+  top: 70px;
+  /* background-color: aquamarine; */
 }
 
 .top-board h4 {
@@ -165,7 +131,6 @@ body {
   font-family: 'Prociono';
 }
 
-
 .top-board h2 {
   position: absolute;
   bottom: 10px;
@@ -176,69 +141,98 @@ body {
   font-family: 'Knewave';
 }
 
-.wins h1 {
+.gameBoard {
+  width: 1300px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-around;
+  position: relative;
+  top: 130px;
+}
+
+.userSide {
+  width: 400px;
+  /* background-color: aliceblue; */
+}
+
+.computerSide {
+  width: 400px;
+  /* background-color: azure; */
+}
+
+.options {
+  /* background-color: aquamarine; */
+  height: 130px;
+  margin-top: 70px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.option {
+  border: 1px solid rgb(7, 55, 55, 0.9);
+  width: 80px;
+  height: 80px;
+  border-radius: 80px;
+  background-color: rgba(7, 55, 55, 0.9);
+  color: white;
+  cursor: pointer;
+  display: flex;
+  align-items: center; 
+  justify-content: center;
   font-family: 'Prociono';
+  font-size: small;
+}
+
+.option.disabled {
+  pointer-events: none;
+  opacity: 0.5;       
+  cursor: not-allowed; 
+}
+
+.option:not(.selected):hover {
+  background: linear-gradient(
+    45deg, #e0f2f1, #ffffff
+  );
+  color: rgba(7, 55, 55, 0.9);
+  border: 1px solid rgb(7, 55, 55, 0.9);
+}
+
+.option.selected {
+  border: 1px solid rgb(7, 55, 55, 0.9);
+  background-color: rgba(7, 55, 55, 0.9);
+  color: white;
+}
+
+.computerChoice {
+  /* background-color: aquamarine; */
+  height: 130px;
+  margin-top: 70px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .computerChoice h2 {
   font-family: 'Prociono';
 }
 
-.computerChoice {
-  height: 100px; 
-  /* display: flex;
+.versus {
+  display: flex;
   align-items: center;
   justify-content: center;
-  position: relative; */
+  position: relative;
+  bottom: 50px;
+}
+
+.wins h1 {
+  font-family: 'Prociono';
 }
 
 .gameBoard > h1 {
   font-family: 'Knewave';
   font-size: small;
   font-weight: bold;
-}
-
-
-.gameBoard {
-  display: flex;
-  justify-content: space-around;
-  width: 1000px;
-}
-
-.userSide {
-  width: 400px;
-  /* background-color: aliceblue; */
-  position: relative;
-  right: 50px;
-}
-
-.computerSide {
-  width: 400px;
-  /* background-color: azure; */
-  position: relative;
-  left: 50px;
-}
-
-button {
-  font-family: 'Knewave';
-}
-
-
-.versus {
-  height: 100px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  /* background-color: antiquewhite; */
-  position: relative;
-  /* top: 80px; */
-  top: 60px;
-}
-
-
-.modal-content h1, 
-.modal-content h3 {
-  font-family: 'Prociono';
 }
 
 .modal-content {
@@ -255,37 +249,22 @@ button {
   border: 1px solid rgb(7, 55, 55, 0.9);
 }
 
-button {
-  font-family: 'Knewave';
-}
-
-
-
-
-
-
-
-
-
-.options {
-  /* background-color: aquamarine; */
-  height: 130px;
-  margin-top: 70px;
-}
-
-.computerChoice {
-  /* background-color: aquamarine; */
-  height: 130px;
-  justify-content: center;
-  align-items: center;
-  padding-top: 40px;
-  margin-top: 70px;
-}
-
-
-
 .modal-body {
   background: linear-gradient(
     175deg, #e0f2f1, #ffffff
   );
+}
+
+.modal-content h1, 
+.modal-content h3 {
+  font-family: 'Prociono';
+}
+
+
+.homelink {
+  color: #213547;;
+}
+
+.homelink:hover {
+  color: #213547;;
 }
